# CSC_331H_Project1

./: .gitignore  CMakeLists.txt  README.md  main.cpp
lib/: CMakeLists.txt  DoublyLinkedList.cpp  DoublyLinkedList.h  Node.h
lib/include/: DoublyLinkedList.h  Node.h
tests/: test.cpp
